Including jQuery in loader configuration

--- a/build.gradle
+++ b/build.gradle
@@ -6,3 +6,7 @@ dependencies {
 	compile group: "jstl", name: "jstl", version: "1.2"
 	compile group: "org.osgi", name: "org.osgi.compendium", version: "5.0.0"
 }
+
+configJSModules {
+	include "**/*.js*"
+}
