--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "hello-react",
   "version": "1.0.0",
-  "scripts": {
-    "build": "webpack"
-  },
   "devDependencies": {
+    "babel-core": "^6.13.2",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "react": "^15.3.1",
+    "react-dom": "^15.3.1",
     "webpack": "^1.13.2"
   }
 }
