--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "babel-preset-react": "^6.11.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "webpack": "^1.13.2"
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.15.0"
+  },
+  "scripts": {
+	  "server": "webpack-dev-server"
   }
 }
