--- a/todo-app-webpack/package.json
+++ b/todo-app-webpack/package.json
@@ -8,10 +8,11 @@
     "babel-preset-react": "^6.11.1",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
+    "react-hot-loader": "^1.3.0",
     "webpack": "^1.13.2",
     "webpack-dev-server": "^1.15.0"
   },
   "scripts": {
-	  "server": "webpack-dev-server"
+    "server": "webpack-dev-server"
   }
 }
